--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
-DB_DATABASE=vertebra
+DB_DATABASE=vertebra-api
 JWT_SECRET=PpB$K8@b8Tn%SH6@eLkmdG&nT84P@oKhk$YLdErRpK
